--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,7 @@
 				<ul class="footer-list">
 					<li><a href="{% url 'index' %}">Главная</a></li>
 					<li><a href="{% url 'about' %}">О системе</a></li>
+					<li><a href="{% url 'feedbacks' %}">Отзывы</a></li>
 					<li><a href="{% url 'contacts' %}">Контакты</a></li>
                     {% if  request.user.is_authenticated %}
                     <li><a href="{% url 'profile_index' %}">Личный кабинет</a></li>
