--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -112,6 +112,13 @@
 							<span class="contacts-title">Москва, Новодмитровская улица, 2к1</span>
 							<p>Адрес</p>
 						</div>
+                        <div class="contacts-block" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
+							<div class="contacts-ico">
+								<img src="{% static 'img/contacts-ico-4.svg' %}" alt="">
+							</div>
+							<span class="contacts-title">Круглосуточно</span>
+							<p>Время работы</p>
+						</div>
 					</div>
 				</div>
 			</div>
