--- a/templates/header_profile.html
+++ b/templates/header_profile.html
@@ -12,6 +12,7 @@
 					<ul class="header-list">
 					  <li><a href="{% url 'index' %}">Главная</a></li>
                         <li><a href="{% url 'about' %}">О системе</a></li>
+                    <li><a href="{% url 'feedbacks' %}">Отзывы</a></li>
                         <li><a href="{% url 'contacts' %}">Контакты</a></li>
                         {% if request.user.is_superuser %}
                              <li><a href="{% url 'cp_users' %}">Админка</a></li>
