--- a/templates/header_profile.html
+++ b/templates/header_profile.html
@@ -6,6 +6,7 @@
 				<a href="/">
 					<img src="{% static 'img/logo.svg' %}" alt="">
 				</a>
+                <span class="logo-title">Cashback от букмекерских контор</span>
 			</div>
 			<div class="header-over">
 				<div class="header-row">
