--- a/templates/user/edit_profile.html
+++ b/templates/user/edit_profile.html
@@ -71,14 +71,14 @@
 												</div>
 											</div>
 										</div>
-{#										<div class="profile-col">#}
-{#											<label for="i-6">Телефон</label>#}
-{#											<div class="input-block">#}
-{#												<div class="input-block__wrap">#}
-{#													<input id="i-6" type="text" name="{{ form.phone.name }}" value="{{ request.user.phone }}" placeholder="Телефон">#}
-{#												</div>#}
-{#											</div>#}
-{#										</div>#}
+										<div class="profile-col">
+											<label for="i-6">Телефон</label>
+											<div class="input-block">
+												<div class="input-block__wrap">
+													<input id="i-6" type="text" name="{{ form.phone.name }}" value="{{ request.user.phone }}" placeholder="Телефон">
+												</div>
+											</div>
+										</div>
 										<div class="profile-col">
 											<label for="i-7">Страна</label>
 											<div class="input-block">
