--- a/templates/user/add_to_balance_form.html
+++ b/templates/user/add_to_balance_form.html
@@ -23,7 +23,7 @@
                                            value="Пополнение баланса пользователя {{ request.user.first_name }} {{ request.user.last_name }}">
                                     <input type="hidden" name="paymentType" value="AC">
                                     <input id="label_1" type="hidden" name="label" value="">
-                                    <input type="hidden" name="successURL" value="https://ugscash.ru/user/profile/finance?pay_complete=!">
+                                    <input type="hidden" name="successURL" value="{{ success_url }}">
 
 
 
