--- a/templates/user/arhive.html
+++ b/templates/user/arhive.html
@@ -14,38 +14,86 @@
 				</div>
 				<div class="operations operations-second">
 					<div class="period">
-						<form action="">
-							<div class="period-row">
-								<div class="period-col">
-									<p>Период времени</p>
-									<div class="input-block">
-										<select name="time">
-                                        	<option {% if time_filter == 'all' %}selected{% endif %} value="all">За весь период</option>
-											<option {% if time_filter == 'c_m' %}selected{% endif %} value="c_m">Текущий месяц</option>
-											<option {% if time_filter == 'l_m' %}selected{% endif %} value="l_m">Прошлый месяц</option>
-										</select>
-									</div>
-								</div>
-								<div class="period-col">
-									<p>Сумма операции</p>
-									<div class="input-block">
-										 <select name="summ">
-											<option {% if summ_filter == 'all' %}selected{% endif %} value="all">Все операции</option>
-											<option {% if summ_filter == 100 %}selected{% endif %} value="100">от 100 руб</option>
-											<option {% if summ_filter == 300 %}selected{% endif %} value="300">от 300 руб</option>
-											<option {% if summ_filter == 500 %}selected{% endif %} value="500">от 500 руб</option>
-											<option {% if summ_filter == 1000 %}selected{% endif %} value="1000">от 1000 руб</option>
-											<option {% if summ_filter == 5000 %}selected{% endif %} value="5000">от 5000 руб</option>
-											<option {% if summ_filter == 10000 %}selected{% endif %} value="100000">от 100000 руб</option>
-										</select>
-									</div>
-								</div>
-								<div class="period-col">
-									<p></p>
-									<button type="submit" class="main-btn">Применить</button>
-								</div>
-							</div>
-						</form>
+						      <form action="" >
+                            <div class="period-row">
+                                <div class="period-col">
+                                    <p>Период времени</p>
+                                    <div class="input-block select-input">
+                                        <div class="select">
+                                            <div class="select-main">
+                                                {% if time_filter == 'all' or not time_filter %}<div class="select-text">За весь период</div>{% endif %}
+                                                {% if time_filter == 'c_m' %}<div class="select-text">Текущий месяц</div>{% endif %}
+                                                {% if time_filter == 'l_m' %}<div class="select-text">Прошлый месяц</div>{% endif %}
+                                                <div class="input-icon">
+                                                    <svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.381653 2.25084C0.17426 2.05294 0.175367 1.72156 0.384077 1.52505L1.65814 0.325514C1.8519 0.143086 2.1546 0.144398 2.34678 0.328499L8.15679 5.89449C8.35024 6.07981 8.65537 6.07975 8.84873 5.89434L14.6532 0.328791C14.8454 0.144548 15.1482 0.14317 15.342 0.325656L16.6161 1.52517C16.8247 1.72163 16.8259 2.05293 16.6186 2.25084L8.84801 9.67042C8.65483 9.85487 8.35079 9.85492 8.15755 9.67053L0.381653 2.25084Z" fill="#1B1B1B"/></svg>
+                                                </div>
+                                            </div>
+                                            <div class="select-info">
+                                                <ul>
+                                                    <li data-value="all">За весь период</li>
+                                                    <li data-value="c_m">Текущий месяц</li>
+                                                    <li data-value="l_m">Прошлый месяц</li>
+                                                </ul>
+                                            </div>
+                                            {% if time_filter == 'all' or not time_filter %}<input type="text" name="time" class="select-value" value="all">{% endif %}
+                                            {% if time_filter == 'c_m' %}<input type="text" name="time" class="select-value" value="c_m">{% endif %}
+                                            {% if time_filter == 'l_m' %}<input type="text" name="time" class="select-value" value="l_m">{% endif %}
+
+                                    </div>
+                                </div>
+{#                                <div class="input-block">#}
+{#                                    <select name="time">#}
+{#                                        <option {% if time_filter == 'all' %}selected{% endif %} value="all">За весь период</option>#}
+{#                                        <option {% if time_filter == 'c_m' %}selected{% endif %} value="c_m">Текущий месяц</option>#}
+{#                                        <option {% if time_filter == 'l_m' %}selected{% endif %} value="l_m">Прошлый месяц</option>#}
+{#                                    </select>#}
+{#                                </div>#}
+                            </div>
+                            <div class="period-col">
+                                <p>Сумма операции</p>
+                             <div class="input-block select-input">
+                                        <div class="select">
+                                            <div class="select-main">
+                                                {% if summ_filter == 'all' or not summ_filter %}<div class="select-text">Все операции</div>{% endif %}
+                                                {% if summ_filter == 100 %}<div class="select-text">от 100 руб</div>{% endif %}
+                                                {% if summ_filter == 300 %}<div class="select-text">от 300 руб</div>{% endif %}
+                                                {% if summ_filter == 500 %}<div class="select-text">от 500 руб</div>{% endif %}
+                                                {% if summ_filter == 1000 %}<div class="select-text">от 1000 руб</div>{% endif %}
+                                                {% if summ_filter == 5000 %}<div class="select-text">от 5000 руб</div>{% endif %}
+                                                {% if summ_filter == 10000 %}<div class="select-text">от 10000 руб</div>{% endif %}
+
+                                                <div class="input-icon">
+                                                    <svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.381653 2.25084C0.17426 2.05294 0.175367 1.72156 0.384077 1.52505L1.65814 0.325514C1.8519 0.143086 2.1546 0.144398 2.34678 0.328499L8.15679 5.89449C8.35024 6.07981 8.65537 6.07975 8.84873 5.89434L14.6532 0.328791C14.8454 0.144548 15.1482 0.14317 15.342 0.325656L16.6161 1.52517C16.8247 1.72163 16.8259 2.05293 16.6186 2.25084L8.84801 9.67042C8.65483 9.85487 8.35079 9.85492 8.15755 9.67053L0.381653 2.25084Z" fill="#1B1B1B"/></svg>
+                                                </div>
+                                            </div>
+                                            <div class="select-info">
+                                                <ul>
+                                                    <li data-value="all">Все операции</li>
+                                                    <li data-value="100">от 100 руб</li>
+                                                    <li data-value="300">от 300 руб</li>
+                                                    <li data-value="500">от 500 руб</li>
+                                                    <li data-value="1000">от 1000 руб</li>
+                                                    <li data-value="5000">от 5000 руб</li>
+                                                    <li data-value="10000">от 10000 руб</li>
+                                                </ul>
+                                            </div>
+                                            {% if summ_filter == 'all' or not summ_filter %}<input type="text" name="summ" class="select-value" value="all">{% endif %}
+                                            {% if summ_filter == 100 %}<input type="text" name="summ" class="select-value" value="100">{% endif %}
+                                            {% if summ_filter == 300 %}<input type="text" name="summ" class="select-value" value="300">{% endif %}
+                                            {% if summ_filter == 500 %}<input type="text" name="summ" class="select-value" value="500">{% endif %}
+                                            {% if summ_filter == 1000 %}<input type="text" name="summ" class="select-value" value="1000">{% endif %}
+                                            {% if summ_filter == 5000 %}<input type="text" name="summ" class="select-value" value="5000">{% endif %}
+                                            {% if summ_filter == 10000 %}<input type="text" name="summ" class="select-value" value="10000">{% endif %}
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="period-col">
+                                <p></p>
+                                <button class="main-btn">Применить</button>
+                            </div>
+                    </div>
+                    </form>
 					</div>
 					<div class="operations-table">
 						<div class="operations-row operations-top">
@@ -72,16 +120,16 @@
 							</div>
 							<div class="operations-col operations-col__2">
 							    {% if bet.image%}
-                                            <a href="{{ bet.image.url }}" target="_blank" class="bet-image"><span>₽ {{ bet.amount }}</span></a>
+                                            <a href="{{ bet.image.url }}" target="_blank" class="bet-image"><span>скрин</span></a>
                                         {% else %}
-                                            <span>{{ bet.url }}</span>
+                                            <a href="{{ bet.url }}" target="_blank" class="bet-image"><span>ссылка</span></a>
                                         {% endif %}
 							</div>
 							<div class="operations-col operations-col__3">
 								<span>{{ bet.cashback }}%</span>
 							</div>
 							<div class="operations-col operations-col__4">
-								<span>₽ {{ bet.bet_result_amount }}</span>
+								<span>₽ {{ bet.amount }}</span>
 							</div>
 							<div class="operations-col operations-col__5">
                                 {% if bet.bet_result == True %}
