--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
 <header class="header">
     <div class="wrapper">
        <div class="header-logo">
-				<a href="#">
+				<a href="/">
 					<img src="{% static 'img/logo.svg' %}" alt="кэшбэк со ставок на спорт">
 				</a>
 				<span class="logo-title">Cashback от букмекерских контор</span>
